--- a/marbiz-frontend/src/App.css
+++ b/marbiz-frontend/src/App.css
@@ -1,43 +1,7 @@
-* {
-  margin: 0;
-  padding: 0;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-}
-
-@font-face {
-  font-family: "SharpGrotesk-medium";
-  src: local("./Fonts/Sharp_Grotesk/sharp-grotesk-medium-25-regular.woff")
-    format("woff");
-}
-@font-face {
-  font-family: "SharpGrotesk-bold";
-  src: local("./Fonts/Sharp_Grotesk/SharpGrotesk-Bold25.otf") format("otf");
-}
-@font-face {
-  font-family: "Coolvetica-rg";
-  src: local("./Fonts/Coolvetica/coolvetica-rg.otf ") format("otf");
-}
-
-body,
-html {
+body {
   background-color: #000000;
   min-height: 100vh;
-}
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-}
-
-a {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .App {
@@ -134,7 +98,7 @@ a {
 
 .box .text-wrapper {
   color: #ffffff;
-  font-family: "Inter-Bold", Helvetica;
+  /* font-family: "Inter-Bold", Helvetica; */
   font-size: 15px;
   font-weight: 700;
   left: 12px;
@@ -166,7 +130,7 @@ a {
 
 .box .text-wrapper-2 {
   color: #ffffff;
-  font-family: "Inter-Regular", Helvetica;
+  /* font-family: "Inter-Regular", Helvetica; */
   font-size: 10px;
   font-weight: 400;
   left: 5px;
@@ -343,8 +307,8 @@ a {
   color: #ffffff;
   cursor: pointer;
   display: inline-block;
-  font-family: Inter, -apple-system, system-ui, Roboto, "Helvetica Neue", Arial,
-    sans-serif;
+  /* font-family: Inter, -apple-system, system-ui, Roboto, "Helvetica Neue", Arial, */
+    /* sans-serif; */
   height: 40px;
   line-height: 40px;
   outline: 0;
@@ -369,15 +333,16 @@ a {
 }
 
 .typeWriterText {
-  font-size: 60px;
+  font-size: 80px;
   color: white;
-  font-weight: 900;
+  font-weight: 400;
   line-height: 1;
 }
 .typeWriterTextMove {
-  font-size: 60px;
-  font-weight: 900;
+  font-size: 80px;
+  font-weight: 400;
   line-height: 1;
+  font-family: "Coolvetica11";
 
   background: -webkit-linear-gradient(
     #ec0606,
@@ -399,17 +364,15 @@ a {
 }
 
 .nav-item {
-  width: 160px;
+  /* width: 160px; */
   text-align: center;
+  margin: 0 10px;
 }
 
 .nav-link {
   color: #fff;
-  font-size: 18px;
-  font-weight: 600;
-}
-.nav-link:hover {
-  color: #f25cb4;
+  /* font-size: 18px; */
+  /* font-weight: 600; */
 }
 
 .promotion-card {
@@ -437,7 +400,7 @@ a {
   text-decoration: none;
 }
 .group-item:hover {
-  color: rgb(182, 57, 255);
+  color: #f5615f;
 }
 
 .footer {
@@ -503,9 +466,11 @@ a {
 
 .section-heading {
   color: white;
-  font-size: 60px;
-  font-weight: 500;
+  font-size: 56px;
+  font-weight: 400;
   line-height: 73px;
+  /* font-family: Coolvetica1; */
+
 }
 
 .section-featured {
@@ -528,7 +493,7 @@ a {
 .search-input,
 .search-button {
   color: #fff;
-  font-family: Nunito;
+  /* font-family: Nunito; */
   padding: 0;
   margin: 0;
   border: 0;
@@ -790,9 +755,9 @@ a {
 
 /* Dark background */
 .dark-bg {
-  background-color: #292929;
+  background-color: #000000;
   padding: 10px 15px;
-  border: 1px solid #333333;
+  border: 2px solid #333333;
   /* border-top: 0px solid #6f42c1; */
   /* border-bottom: 2px solid #6f42c1; 
   border-left: 0px solid #6f42c1; 
@@ -829,8 +794,8 @@ a {
 }
 
 .inquiry-form {
-  background-color: #28282b;
-  border: 1px solid #fc396e;
+  background-color: #000000;
+  border: 1px solid #fc396d71;
 }
 
 .css-13cymwt-control {
@@ -934,7 +899,7 @@ a {
 
 .nav-link:focus,
 .nav-link:hover {
-  color: #fd66ab;
+  color: #f5615f;
 }
 
 .main-category-filter {
@@ -956,9 +921,20 @@ a {
   background-color: white !important;
 }
 
-.basic-multi-select {
-  /* width: 100vw; */
+.signupForm .basic-multi-select {
+  
+  border: 2px solid #333333;
+  border-radius: 10px;
 }
+
+
+
+.signupForm .basic-multi-select .category__control--menu-is-open {
+  
+  border: 2px solid #f5615f;
+  /* border-radius: 10px; */
+}
+
 .custom-card {
   margin-right: 20px; /* Adjust the margin to control the spacing between cards */
 }
