--- a/marbiz-frontend/src/responsive.css
+++ b/marbiz-frontend/src/responsive.css
@@ -52,7 +52,7 @@
   }
   .infoCardHeading {
     text-align: center;
-    font-size: 30px;
+    font-size: 25px !important;
   }
 
   .brand-btn {
@@ -70,6 +70,10 @@
     font-size: 20px;
     font-weight: 400;
     line-height: 28px;
+  }
+  .home-body {
+    padding-top: 50px;
+    /* min-height: 800px; */
   }
 }
 @media only screen and (max-width: 375px) {
