--- a/marbiz-frontend/src/App.css
+++ b/marbiz-frontend/src/App.css
@@ -1215,3 +1215,16 @@ body {
   font-weight: 400;
   line-height: 48px;
 }
+
+.user-image-container {
+  width: 50px;
+  height: 50px;
+  overflow: hidden;
+  border-radius: 50%;
+}
+.user-image-container img{
+  width: 100%;
+  height: 100%;
+  object-position: center;
+  object-fit: cover;
+}
