--- a/marbiz-frontend/src/App.css
+++ b/marbiz-frontend/src/App.css
@@ -1146,12 +1146,14 @@ body {
 .bottom-nav-link {
   display: flex;
   flex-direction: column;
-  font-size: 18px;
+  font-size: 16px;
   color: white;
   flex-direction: column;
   align-items: center;
   /* font-weight: 600; */
   padding: 0.8rem 0;
+  /* width: 80px; */
+  align-self: center;
 }
 .bottom-nav-link:hover {
   color: #f5615f;
