--- a/marbiz-frontend/src/responsive.css
+++ b/marbiz-frontend/src/responsive.css
@@ -41,7 +41,6 @@
     opacity: 0.7;
     mix-blend-mode: luminosity;
     overflow-x: hidden;
-  
   }
 
   .new-brand-box .unlock-door-popup {
@@ -54,17 +53,20 @@
   .footer-brand {
     width: 50%;
   }
-
 }
 @media only screen and (max-width: 575px) {
   .username-holder {
     width: 100%; /* Set to 100% for smaller screens */
   }
   .bottom-nav-item {
-    max-width: 110px;
+    /* max-width: 110px; */
+  }
+
+  .bottom-nav-item .bottom-nav-link svg {
+    font-size: 23px;
   }
   .bottom-nav {
-    max-width: 412px;
+    /* max-width: 412px; */
   }
   .typeWriterTextMove {
     text-align: center;
@@ -108,12 +110,20 @@
     width: 50%;
     right: -3%;
     top: 50%;
-}
+  }
 }
 @media only screen and (max-width: 375px) {
   .bottom-nav-item {
-    max-width: 92px;
+    /* max-width: 92px; */
   }
+
+  .bottom-nav-item .bottom-nav-link svg {
+    font-size: 18px;
+  }
+
+.bottom-nav-link {
+  font-size: 14px;
+}
 
   .multi-select-category .css-13cymwt-control,
   .multi-select-category .css-t3ipsp-control {
