updated ui of package page

--- a/marbiz-frontend/src/App.css
+++ b/marbiz-frontend/src/App.css
@@ -1149,7 +1149,7 @@ body {
 }
 
 /* header navigation */
-.nav-link.active {
+#navbar .nav-link.active {
   color: #ffffff; /* Specify your active link text color here */
   /* -o-transition: all 0.2s ease-in-out; */
   /* -webkit-transition: all 0.2s ease-in-out; */
