--- a/marbiz-frontend/src/App.css
+++ b/marbiz-frontend/src/App.css
@@ -1465,3 +1465,64 @@ div:where(.swal2-container) h2:where(.swal2-title) {
 .new-brand-box .video-sec {
   border-radius: 15px;
 }
+
+
+/* our work filter gallery */
+.youtube_embed_videos_wrap {
+  margin-bottom: 30px;
+}
+
+.youtube-card {
+  display: grid;
+  grid-template-columns: repeat(4, minmax(150px, 1fr));
+  grid-column-gap: 1rem;
+  grid-row-gap: 2rem;
+}
+
+.youtube-thumb {
+  width: 100%;
+  /* height: 35vh; */
+  height: 200px;
+  object-fit: cover;
+  border-radius: 1rem;
+  margin-bottom: 0.2rem;
+}
+
+.youtube-card .play_icon {
+  width: 30px;
+  height: 30px;
+  background-image: url(https://ik.imagekit.io/j83rchiauw/play_icon_brands_page.svg?updatedAt=1696577821261);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  cursor: pointer;
+  position: absolute;
+  top: calc(50% - 25px);
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.youtube-video-title {
+  font-size: 14px;
+}
+
+.filter-container .tab_title.active {
+  background-image: linear-gradient(55deg,#ff893b,#f02828);
+  border: 2px solid #fff;
+
+  
+}
+
+.filter-container .tab_title {
+  font-size: 16px;
+  background-image: black;
+  background-color: black;
+  color: #fff;
+  padding: 12px 20px;
+  border: 2px solid #fff;
+  text-align: center;
+  cursor: pointer;
+  margin: 0 10px;
+  border-radius: 20px;
+  
+}
