--- a/marbiz-frontend/src/App.css
+++ b/marbiz-frontend/src/App.css
@@ -1418,7 +1418,14 @@ div:where(.swal2-container) h2:where(.swal2-title) {
   border-radius: 15px;
   height: 412px;
   object-fit: fill;
+  /* width: 200px; */
 }
+
+.owl-carousel.owl-drag .owl-item.active.center {
+  width: 360px !important;
+}
+
+
 
 .new-brand-box .new-slider .owl-item {
   /* -webkit-mask-image: -webkit-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,1), rgba(0,0,0,0)); */
