--- a/marbiz-frontend/src/responsive.css
+++ b/marbiz-frontend/src/responsive.css
@@ -125,8 +125,13 @@
 
   .owl-carousel.owl-drag .owl-item {
     width: 360px !important;
-  
   }
+
+  
+.owl-carousel.owl-drag .owl-item.active.center {
+  width: 360px !important;
+}
+
 
   .bottom-nav-item .bottom-nav-link svg {
     font-size: 23px;
@@ -168,7 +173,7 @@
   }
 
   .new-brand-box .unlock-door-content .celeb-business-note {
-    font-size: 20px;
+    font-size: 16px;
   }
 
   .new-brand-box .modern-img img {
