update celeb slider for mobile

--- a/marbiz-frontend/src/App.css
+++ b/marbiz-frontend/src/App.css
@@ -1422,7 +1422,9 @@ div:where(.swal2-container) h2:where(.swal2-title) {
 }
 
 .owl-carousel.owl-drag .owl-item.active.center {
-  width: 260px !important;
+  /* width: 260px !important; */
+  display: flex;
+  justify-content: center;
 }
 
 
