--- a/marbiz-frontend/src/responsive.css
+++ b/marbiz-frontend/src/responsive.css
@@ -124,12 +124,12 @@
   }
 
   .owl-carousel.owl-drag .owl-item {
-    width: 360px !important;
+    /* width: 360px !important; */
   }
 
   
 .owl-carousel.owl-drag .owl-item.active.center {
-  width: 360px !important;
+  /* width: 360px !important; */
 }
 
 
