--- a/marbiz-frontend/src/App.css
+++ b/marbiz-frontend/src/App.css
@@ -1069,6 +1069,7 @@ body {
     #fc396e,
     #f5615f
   );
+  transition: .4s ease;
   background-image: 0 4px 15px 0 rgb(49, 22, 19);
   /* box-shadow: 0 4px 15px 0 rgba(252, 104, 110, 0.75); */
 }
@@ -1095,6 +1096,7 @@ body {
     #fc396e
   );
   background-image: 0 4px 15px 0 rgb(49, 22, 19);
+  transition: .4s ease;
   box-shadow: 0 4px 15px 0 rgba(252, 104, 110, 0.75);
 }
 
@@ -1123,6 +1125,7 @@ body {
   );
   background-image: 0 4px 15px 0 rgb(49, 22, 19);
   box-shadow: 0 4px 15px 0 rgba(252, 104, 110, 0.75);
+  
 }
 
 .nav-tabs .nav-link {
@@ -1205,6 +1208,7 @@ body {
   padding: 0.8rem 0;
   /* width: 80px; */
   align-self: center;
+  transition: 0.3s ease;
 }
 .bottom-nav-link:hover {
   color: #f5615f;
@@ -1495,11 +1499,12 @@ div:where(.swal2-container) h2:where(.swal2-title) {
   /* height: 35vh; */
   height: 200px;
   object-fit: cover;
-  border-radius: 1rem;
+  border-radius: 10px;
   margin-bottom: 0.2rem;
 }
 
-.youtube-card .play_icon {
+.youtube-card .play_icon, 
+.reel-card .play_icon {
   width: 30px;
   height: 30px;
   background-image: url(https://ik.imagekit.io/j83rchiauw/play_icon_brands_page.svg?updatedAt=1696577821261);
@@ -1508,13 +1513,15 @@ div:where(.swal2-container) h2:where(.swal2-title) {
   background-size: contain;
   cursor: pointer;
   position: absolute;
-  top: calc(50% - 25px);
+  top: calc(50% - 15px);
   left: 50%;
   transform: translate(-50%, -50%);
 }
 
 .youtube-video-title {
   font-size: 14px;
+  /* text-align: center; */
+  margin-top: 5px;
 }
 
 .filter-container .tab_title.active {
