--- a/marbiz-frontend/src/responsive.css
+++ b/marbiz-frontend/src/responsive.css
@@ -71,6 +71,11 @@
     padding: 0;
     margin-top: 2rem;
   }
+
+  .package-navigation .nav-item {
+    width: 35%;
+    margin: 10px;
+  }
 }
 
 @media only screen and (max-width: 767px) {
@@ -127,11 +132,9 @@
     /* width: 360px !important; */
   }
 
-  
-.owl-carousel.owl-drag .owl-item.active.center {
-  /* width: 360px !important; */
-}
-
+  .owl-carousel.owl-drag .owl-item.active.center {
+    /* width: 360px !important; */
+  }
 
   .bottom-nav-item .bottom-nav-link svg {
     font-size: 23px;
